--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -21,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
+    "mongoose-geojson-schema": "^2.2.6",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "uuid": "^11.0.5",
